[package]
name = "mineru-json-to-md"
version = "0.1.0"
edition = "2024"
authors = ["MinerU Converter Contributors"]
description = "Convert MinerU layout.json to Markdown with embedded images and rich formatting"
license = "MIT"
repository = "https://github.com/yourusername/mineru-json-to-md"
keywords = ["mineru", "pdf", "markdown", "converter", "ocr"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mineru-json-to-md"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
